tests/NormalTests/paczka1/fuzzy1/49472001.err
Error in line 2: ik8y1pc A894 35,5
Error in line 4: 7Aq A894 80,9
Error in line 14: ik8y1pc S128 28,8
Error in line 18: ik8y1pc A549 41,1
Error in line 17: A894 A987 61,2
Error in line 28: A894 A987 25,4
Error in line 32: 7Aq A987 43,0
Error in line 37: 7Aq S128 15,3
Error in line 30: ik8y1pc A549 24,7
Error in line 38: 7Aq A549 82,9
